Modernización nar-maven-plugin: Maven 3.9/Resolver 1.9.x, JUnit 5, lint 0 warnings, docs solo-GNU y contención de Ant
Packaging/lifecycle nar:
- components.xml: LifecycleMapping usa el groupId nuevo org.gjs.maven.plugins
  (evita arrastrar el plugin viejo com.github.maven-nar en resolve-plugins).
- m2e: eliminado el goal inexistente nar-vcproj.

Migración Maven 3.9 / Resolver 1.9.x:
- localRepository derivado de repoSession.getLocalRepository().
- getAbsolutePathForLocalArtifact (Resolver 2.x) -> getPathForLocalArtifact + basedir.
- remoteArtifactRepositories via ${project.remoteProjectRepositories} (tipo aether).
- getProjectBuildingRequest via session; deprecaciones forzadas de 1.9.x suprimidas
  con @SuppressWarnings + comentario (su alternativa es de Maven 4).

Compilación/tests nativos:
- NarTestMojo: guard .exe (evita Test.exe.exe); rutas de libs del linker al
  PATH/LD_LIBRARY_PATH de ejecución + nuevo parámetro <binDirectory> en <lib>.
- getNarArtifacts ordena por profundidad máxima del árbol de dependencias verbose
  (orden de includes correcto con dependencias directas redundantes).

Deuda de Java antiguo + lint=all a 0 warnings:
- Bug real: sharedObjectName != "" (identidad de referencia) -> isEmpty null-safe.
- .equals("") -> isEmpty; new String(concat) inútil fuera; printStackTrace saneado
  con restauración del flag de interrupción; casts redundantes y raw types tipados.
- Deprecaciones: Archiver.addDirectory->DefaultFileSet, Class.newInstance,
  this.project/getProject, this.ref/getRefid, Execute.getProcEnvironment->System.getenv.

Contención de Ant (se mantiene Ant, sin desacoplar):
- CommandExecution -> ProcessBuilder; Ant FileUtils.getRelativePath -> nio
  (CUtil.getRelativeCompilerPath, forward slashes); Commandline.toString ->
  CUtil.toCommandLine.

Tests: migración JUnit 5 completada y limpieza; +8 tests nuevos (185 en verde).
Docs (README/site/xdocs): solo-GNU, sin fases jni/integration-test ni compiladores no-GNU.

Co-Authored-By: Claude Opus